packages/kyvernoPolicies/chart/tests/vpol/require-requests-equal-limits-cel/chainsaw-test/pod-bad-missing-limits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-missing-limits
spec:
  containers:
  - name: c1
    image: nginx
    resources:
      requests:
        cpu: "100m"
        memory: "64Mi"
