packages/kyvernoPolicies/chart/tests/vpol/require-requests-equal-limits-cel/chainsaw-test/pod-bad-unequal-cpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-unequal-cpu
spec:
  containers:
  - name: c1
    image: nginx
    resources:
      requests:
        cpu: "100m"
        memory: "64Mi"
      limits:
        cpu: "200m"
        memory: "64Mi"
